--- a/SDL_MixAudio.mediawiki
+++ b/SDL_MixAudio.mediawiki
@@ -42,14 +42,7 @@ This is provided for convenience -- you can mix your own audio data.
 
 Do not use this function for mixing together more than two streams of sample data. The output from repeated application of this function may be distorted by clipping, because there is no accumulator with greater range than the input (not to mention this being an inefficient way of doing it). Use mixing functions from SDL_mixer, OpenAL, or write your own mixer instead.
 
-It is a common misconception that this function is required to write audiodata to an outputstream in the audio-callback like: 
-```c++
-void audio_callback(void *udata, Uint8 *stream, int len)
-{
-    SDL_MixAudio(stream, audio_pos, len, SDL_MIX_MAXVOLUME);
-}
-```
-Although this works, for a single channel it's just as good as writing the audiodata directly to stream; that is if you don't need the volume adjustment. 
+It is a common misconception that this function is required to write audiodata to an outputstream in the audio-callback.  While you can do that, [[SDL_MixAudio]]() is really only needed when you're mixing a single audio stream with a volume adjustment.
 
 == Related Functions ==
 :[[SDL_MixAudioFormat]]
