--- a/SDL_OpenAudio.mediawiki
+++ b/SDL_OpenAudio.mediawiki
@@ -14,10 +14,10 @@ int SDL_OpenAudio(SDL_AudioSpec* desired,
 == Function Parameters ==
 {|
 |'''desired'''
-|an audio device defined by [[SDL_AudioSpec]]; see [[#Remarks|Remarks]]
+|the desired audio parameters; see [[#Remarks|Remarks]] for more information
 |-
 |'''obtained'''
-|the [[SDL_AudioSpec]] structure to receive the data
+|a pointer to an [[SDL_AudioSpec]] structure to be filled in
 |}
 
 == Return Value ==
@@ -90,14 +90,14 @@ When filling in the desired audio spec structure,
 *desired->''format'' should be the desired audio format
 *desired->''samples'' is the desired size of the audio buffer, in samples.  This number should be a power of two, and may be adjusted by the audio driver to a value more suitable for the hardware.  Good values seem to range between 512 and 8096 inclusive, depending on the application and CPU speed.  Smaller values yield faster response time, but can lead to underflow if the application is doing heavy processing and cannot fill the audio buffer in time.  A stereo sample consists of both right and left channels in LR ordering.
  Note that the number of samples is directly related to time by the following formula:  \code ms = (samples*1000)/freq \endcode
-*desired->''size'' is the size in bytes of the audio buffer, and is calculated by SDL_OpenAudio()
-*desired->''silence'' is the value used to set the buffer to silence, and is calculated by SDL_OpenAudio()
+*desired->''size'' is the size in bytes of the audio buffer, and is calculated by [[SDL_OpenAudio]]()
+*desired->''silence'' is the value used to set the buffer to silence, and is calculated by [[SDL_OpenAudio]]()
 *desired->''callback'' should be set to a function that will be called when the audio device is ready for more data.  It is passed a pointer to the audio buffer, and the length in bytes of the audio buffer.  This function usually runs in a separate thread, so you should protect data structures that it accesses by calling [[SDL_LockAudio]]() and [[SDL_UnlockAudio]]() in your code.
 *desired->''userdata'' is passed as the first parameter to your callback function.
 
-SDL_OpenAudio() reads these fields from the '''desired''' [[SDL_AudioSpec]] structure passed to the function and attempts to find an audio configuration matching your '''desired'''. As mentioned above, if the '''obtained''' parameter is NULL then SDL with convert from your desired audio settings to the hardware settings as it plays.
+[[SDL_OpenAudio]]() reads these fields from '''desired''' and attempts to find a matching audio configuration. As mentioned above, if '''obtained''' is NULL then SDL with convert from your desired audio settings to the hardware settings as it plays.
 
-If '''obtained''' is NULL then the '''desired''' [[SDL_AudioSpec]] is your working specification, otherwise the '''obtained''' [[SDL_AudioSpec]] becomes the working specification and the '''desired''' specification can be deleted. The data in the working specification is used when building [[SDL_AudioCVT]]'s for converting loaded data to the hardware format.
+If '''obtained''' is NULL then '''desired''' is your working specification, otherwise '''obtained''' is filled in with the working specification. The data in the working specification is used when building [[SDL_AudioCVT]]'s for converting loaded data to the hardware format.
 
 The audio device starts out playing silence when it is opened, and should be enabled for playing by calling [[SDL_PauseAudio]](0) when you are ready for your audio callback function to be called.  Since the audio driver may modify the requested size of the audio buffer, you should allocate any local mixing buffers after you open the audio device.
 
