--- a/SDL_OpenAudioDevice.mediawiki
+++ b/SDL_OpenAudioDevice.mediawiki
@@ -29,7 +29,7 @@ SDL_AudioDeviceID SDL_OpenAudioDevice(const char*          device,
 |a pointer to an [[SDL_AudioSpec]] structure to be filled in; see [[SDL_OpenAudio]]() for more information
 |-
 |'''allowed_changes'''
-|
+|one or more flags OR'd together; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
@@ -43,6 +43,17 @@ You can add your code example here
 == Remarks ==
 Passing in a '''device''' name of NULL requests the most reasonable default (and is equivalent to calling [[SDL_OpenAudio]]()).
 The '''device''' name is a UTF-8 string reported by [[SDL_GetAudioDeviceName]](), but some drivers allow arbitrary and driver-specific strings, such as a hostname/IP address for a remote audio server, or a filename in the diskaudio driver.
+
+'''allowed_changes''' can have the following values:
+{|
+|SDL_AUDIO_ALLOW_FREQUENCY_CHANGE
+|-
+|SDL_AUDIO_ALLOW_FORMAT_CHANGE
+|-
+|SDL_AUDIO_ALLOW_CHANNELS_CHANGE
+|-
+|SDL_AUDIO_ALLOW_ANY_CHANGE
+|}
 
 [[SDL_OpenAudio]](), unlike this function, always acts on device ID 1.
 
