--- a/SDL_OpenAudioDevice.mediawiki
+++ b/SDL_OpenAudioDevice.mediawiki
@@ -29,7 +29,7 @@ SDL_AudioDeviceID SDL_OpenAudioDevice(const char*          device,
 |a pointer to an [[SDL_AudioSpec]] structure to be filled in; see [[SDL_OpenAudio]]() for more information
 |-
 |'''allowed_changes'''
-|0 or one or more flags OR'd together; see [[#Remarks|Remarks]] for details
+|0, or one or more flags OR'd together; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
