--- a/SDL_DestroyWindow.mediawiki
+++ b/SDL_DestroyWindow.mediawiki
@@ -25,4 +25,4 @@ You can add your code example here
 You can add useful comments here
 
 == Related Functions ==
-:[[SDL_OtherFunction]]
+:[[SDL_CreateWindow]]
