--- a/SDL_GetRGBA.mediawiki
+++ b/SDL_GetRGBA.mediawiki
@@ -18,22 +18,22 @@ void SDL_GetRGBA(Uint32   	        pixel,
 == Function Parameters ==
 {|
 |'''pixel'''
-|a pixel
+|a pixel value
 |-
 |'''format'''
 |an [[SDL_PixelFormat]] structure describing the format of the pixel
 |-
 |'''r'''
-|a pointer to a value that will be filled into the red component
+|a pointer to a value that will be filled with the red component
 |-
 |'''g'''
-|a pointer to a value that will be filled into the green component
+|a pointer to a value that will be filled with the green component
 |-
 |'''b'''
-|a pointer to a value that will be filled into the blue component
+|a pointer to a value that will be filled with the blue component
 |-
 |'''a'''
-|a pointer to a value that will be filled into the alpha component
+|a pointer to a value that will be filled with the alpha component
 |}
 
 == Code Examples ==
