--- a/SDL_GetRGB.mediawiki
+++ b/SDL_GetRGB.mediawiki
@@ -17,7 +17,7 @@ void SDL_GetRGB(Uint32                 pixel,
 == Function Parameters ==
 {|
 |'''pixel'''
-|a pixel
+|a pixel value
 |-
 |'''format'''
 |an [[SDL_PixelFormat]] structure describing the format of the pixel
