--- a/SDL_MapRGBA.mediawiki
+++ b/SDL_MapRGBA.mediawiki
@@ -17,23 +17,23 @@ Uint32 SDL_MapRGBA(const SDL_PixelFormat* format,
 == Function Parameters ==
 {|
 |'''format'''
-|
+|an [[SDL_PixelFormat]] structure describing the format of the pixel
 |-
 |'''r'''
-|
+|the red component of the pixel in the range 0-255
 |-
 |'''g'''
-|
+|the green component of the pixel in the range 0-255
 |-
 |'''b'''
-|
+|the blue component of the pixel in the range 0-255
 |-
 |'''a'''
-|
+|the alpha component of the pixel in the range 0-255
 |}
 
 == Return Value ==
-
+A pixel value.
 
 == Code Examples ==
 ```c++
