--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -21,7 +21,7 @@ int SDL_CreateRenderer(SDL_WindowID windowID,
 |the index of the rendering driver to initialize, or -1 to initialize the first one supporting the requested flags
 |-
 |'''flags'''
-|0, or one or more [[SDL_Renderer]] flags OR'd together; see [[#Remarks|Remarks]] for details
+|0, or one or more [[SDL_RendererFlags]] OR'd together; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
