--- a/SDL_RendererFlags.mediawiki
+++ b/SDL_RendererFlags.mediawiki
@@ -5,6 +5,7 @@
 Flags used when creating a rendering context.
 
 
+ <!-- start_section -->
 == Values ==
 {|
 |SDL_RENDERER_SINGLEBUFFER
@@ -28,6 +29,7 @@ Flags used when creating a rendering context.
 |SDL_RENDERER_ACCELERATED
 |the renderer uses hardware acceleration
 |}
+<!-- end_section -->
 
 == Code Examples ==
 ```c++
