attempt to add section comments 3

--- a/SDL_RendererFlags.mediawiki
+++ b/SDL_RendererFlags.mediawiki
@@ -33,7 +33,9 @@ start_section
 |the renderer uses hardware acceleration
 |}
 <!-- end_section -->
-}}}
+```#!wiki comment
+end_section
+```
 
 == Code Examples ==
 ```c++
