--- a/SDL_RendererFlags.mediawiki
+++ b/SDL_RendererFlags.mediawiki
@@ -6,7 +6,7 @@ Flags used when creating a rendering context.
 
 
 ```#!wiki comment
-start_section
+tohere
 ```
 == Values ==
 {|
@@ -32,7 +32,7 @@ start_section
 |the renderer uses hardware acceleration
 |}
 ```#!wiki comment
-end_section
+tohere
 ```
 
 == Code Examples ==
