--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -33,7 +33,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-<<Include(SDL_RendererFlags)>>
+<<Include(SDL_RendererFlags,,, from="fromhere", to="tohere")>>
 
 == Related Functions ==
 :[[SDL_DestroyRenderer]]
