--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -33,7 +33,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-<<Include(SDL_RendererFlags, "Values", 3, from="== Values ==", to="== Code Examples ==")>>
+'''flags''' can have any number of these values OR'd in:
+<<Include(SDL_RendererFlags, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_DestroyRenderer]]
