--- a/SDL_RendererFlags.mediawiki
+++ b/SDL_RendererFlags.mediawiki
@@ -6,7 +6,7 @@ Flags used when creating a rendering context.
 
 
 ```#!wiki comment
-link to the values section only by using the following on the related function page
+When linking only to the values section below, use the following on the related function page:
 <<Include(SDL_RendererFlags,,,from="== Values ==",to="== Code Examples ==")>>
 ```
 
