HTML comment test #2

--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -13,9 +13,8 @@ int SDL_CreateRenderer(SDL_WindowID windowID,
 ```
 
 ```#!html
-<!-- This is an HTML comment -->
+<MARKER>
 ```
-
 
 == Function Parameters ==
 {|
