--- a/SDL_RendererFlags.mediawiki
+++ b/SDL_RendererFlags.mediawiki
@@ -5,7 +5,7 @@
 Flags used when creating a rendering context.
 
 
-<!-- see SDL_CreateRenderer page for Include function syntax -->
+<!-- see [[SDL_CreateRenderer]] page for Include function syntax -->
 
 == Values ==
 {|
