--- a/SDLFunctionTemplate.mediawiki
+++ b/SDLFunctionTemplate.mediawiki
@@ -33,5 +33,4 @@ You can add useful comments here
 :[[SDL_OtherFunction]]
 
 ----
-:[[CategoryAPI]]
-:[[CategoryHeader]]
+[[CategoryAPI]], [[CategoryHeader]]
