--- a/CategoryAPI.mediawiki
+++ b/CategoryAPI.mediawiki
@@ -9,7 +9,7 @@ To add a page to this category, add a link to this page on the last line of the 
 
 '''List of pages in this category:'''
 
-<<FullSearchCached(category:CategoryAPI)>>
+<<FullSearch(category:CategoryAPI)>>
 
 ----
 CategoryCategory
