--- a/CategoryAPI.mediawiki
+++ b/CategoryAPI.mediawiki
@@ -3,11 +3,7 @@
 <!-- format wiki -->
 <!-- language en -->
 
-This category includes all pages which are part of the SDL API reference.  This includes documentation for SDL subsystems, functions, structures and constants.
-
-To add a page to this category, add a link to this page on the last line of the page. You can add multiple categories to a page.
-
-'''List of pages in this category:'''
+= SDL 1.3 API by Name =
 
 <<FullSearch(category:CategoryAPI)>>
 
