--- a/SDL_CreateTextureFromSurface.mediawiki
+++ b/SDL_CreateTextureFromSurface.mediawiki
@@ -14,7 +14,7 @@ SDL_TextureID SDL_CreateTextureFromSurface(Uint32       format,
 == Function Parameters ==
 {|
 |'''format'''
-|the format of the texture, or 0 to pick an appropriate format
+|one of the enumerated values in [[SDL_PixelFormatEnum]], or 0 to pick an appropriate format; see [[#Remarks|Remarks]] for details
 |-
 |'''surface'''
 |the surface containing pixel data used to fill the texture
