--- a/SDL_AudioInit.mediawiki
+++ b/SDL_AudioInit.mediawiki
@@ -29,3 +29,6 @@ This function is used internally, and should not be used unless you have a speci
 
 == Related Functions ==
  [[SDL_AudioQuit]]
+
+----
+[[CategoryAPI]], [[CategoryAudio]]
