--- a/SDL_GetAudioDriver.mediawiki
+++ b/SDL_GetAudioDriver.mediawiki
@@ -33,3 +33,6 @@ The list of audio drivers is given in the order that they are normally initializ
 
 == Related Functions ==
 :[[SDL_GetNumAudioDrivers]]
+
+----
+[[CategoryAPI]], [[CategoryAudio]]
