--- a/SDL_LockAudioDevice.mediawiki
+++ b/SDL_LockAudioDevice.mediawiki
@@ -30,3 +30,6 @@ Do not call these from the callback function or you will cause deadlock.
 :[[SDL_LockAudio]]
 :[[SDL_UnlockAudio]]
 :[[SDL_UnlockAudioDevice]]
+
+----
+[[CategoryAPI]], [[CategoryAudio]]
