--- a/SDL_PauseAudioDevice.mediawiki
+++ b/SDL_PauseAudioDevice.mediawiki
@@ -30,3 +30,6 @@ This function pauses and unpauses the audio callback processing. It should be ca
 
 == Related Functions ==
 :[[SDL_PauseAudio]]
+
+----
+[[CategoryAPI]], [[CategoryAudio]]
