--- a/SDL_UnlockAudioDevice.mediawiki
+++ b/SDL_UnlockAudioDevice.mediawiki
@@ -32,3 +32,6 @@ Do not call these from the callback function or you will cause deadlock.
 :[[SDL_LockAudio]]
 :[[SDL_LockAudioDevice]]
 :[[SDL_UnlockAudio]]
+
+----
+[[CategoryAPI]], [[CategoryAudio]]
