--- a/SDL_PixelFormatEnumToMasks.mediawiki
+++ b/SDL_PixelFormatEnumToMasks.mediawiki
@@ -49,3 +49,6 @@ You can add useful comments here
 
 == Related Functions ==
 :[[SDL_MasksToPixelFormatEnum]]
+
+----
+[[CategoryAPI]], [[CategoryPixels]]
