--- a/SDL_DestroyTexture.mediawiki
+++ b/SDL_DestroyTexture.mediawiki
@@ -27,3 +27,6 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_CreateTexture]]
 :[[SDL_CreateTextureFromSurface]]
+
+----
+[[CategoryAPI]], [[CategoryVideo]]
