--- a/SDL_DirtyTexture.mediawiki
+++ b/SDL_DirtyTexture.mediawiki
@@ -35,3 +35,6 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_LockTexture]]
 :[[SDL_UnlockTexture]]
+
+----
+[[CategoryAPI]], [[CategoryVideo]]
