--- a/SDL_DisableScreenSaver.mediawiki
+++ b/SDL_DisableScreenSaver.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_DisableScreenSaver =
-Use this function to prevent the screen from being blanked by a screen saver .
+Use this function to prevent the screen from being blanked by a screen saver.
 
 
 == Syntax ==
@@ -21,3 +21,6 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_EnableScreenSaver]]
 :[[SDL_IsScreenSaverEnabled]]
+
+----
+[[CategoryAPI]], [[CategoryVideo]]
