--- a/SDL_EnableScreenSaver.mediawiki
+++ b/SDL_EnableScreenSaver.mediawiki
@@ -21,3 +21,6 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_DisableScreenSaver]]
 :[[SDL_IsScreenSaverEnabled]]
+
+----
+[[CategoryAPI]], [[CategoryVideo]]
