--- a/SDL_GetCurrentVideoDriver.mediawiki
+++ b/SDL_GetCurrentVideoDriver.mediawiki
@@ -24,3 +24,6 @@ You can add useful comments here
 == Related Functions ==
 :[[SDL_GetNumVideoDrivers]]
 :[[SDL_GetVideoDriver]]
+
+----
+[[CategoryAPI]], [[CategoryVideo]]
