--- a/SDL_DestroyRenderer.mediawiki
+++ b/SDL_DestroyRenderer.mediawiki
@@ -13,7 +13,7 @@ void SDL_DestroyRenderer(SDL_WindowID windowID)
 == Function Parameters ==
 {|
 |'''windowID'''
-|the window to destroy
+|???the type of the window / the ID of the window to destroy???
 |}
 
 == Code Examples ==
