--- a/SDLEnumTemplate.mediawiki
+++ b/SDLEnumTemplate.mediawiki
@@ -5,7 +5,7 @@
 Flags / Values used when /choose start, replace over slashes with description of the enum/.
 
 
-<!-- Place the following text, or something more appropriate, in the Remarks section of the related function(s)
+<!-- Place the following text, or something more appropriate, in the Remarks section of the related function(s) and remove this comment from the Enum page:
 '''flags''' can have any number of these values OR'd in:
 <<Include(SDL_enumeration, , , from="== Values ==", to="== Code Examples ==")>> -->
 
@@ -30,10 +30,10 @@ You can add your code example here
 You can add useful comments here
 
 == Related Structures ==
-:[[SDL_Structure]]
+:[[SDL_StructureRemoveSectionIfEmpty]]
 
 == Related Functions ==
-:[[SDL_Function]]
+:[[SDL_FunctionLeaveSectionIfEmpty]]
 
 ----
 [[CategoryEnum]]
