--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -37,10 +37,10 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''format''' can be one of these values:
+<span id="format"></span> '''format''' can be one of these values:
 <<Include(SDL_PixelFormatEnum, , , from="== Values ==", to="== Code Examples ==")>>
 
-'''access''' can be one of these values:
+<span id="access"></span>'''access''' can be one of these values:
 <<Include(SDL_TextureAccess, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
