--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -16,10 +16,10 @@ SDL_TextureID SDL_CreateTexture(Uint32 format,
 == Function Parameters ==
 {|
 |'''format'''
-|one of the enumerated values in [[SDL_PixelFormatEnum]]; see [[#Remarks|Remarks]] for details
+|one of the enumerated values in [[SDL_PixelFormatEnum]]; see [[#format|Remarks]] for details
 |-
 |'''access'''
-|one of the enumerated values in [[SDL_TextureAccess]]; see [[#Remarks|Remarks]] for details
+|one of the enumerated values in [[SDL_TextureAccess]]; see [[#access|Remarks]] for details
 |-
 |'''w'''
 |the width of the texture in pixels
