--- a/SDL_CreateTextureFromSurface.mediawiki
+++ b/SDL_CreateTextureFromSurface.mediawiki
@@ -31,7 +31,7 @@ You can add your code example here
 == Remarks ==
 The surface is not modified or freed by this function.
 
-<span id="format"></span> '''format''' can have any one of these values:
+<span id="format"></span> '''format''' can be one of these values:
 <<Include(SDL_PixelFormatEnum, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
