--- a/SDL_DestroyWindow.mediawiki
+++ b/SDL_DestroyWindow.mediawiki
@@ -26,6 +26,7 @@ You can add useful comments here
 
 == Related Functions ==
 :[[SDL_CreateWindow]]
+:[[SDL_CreateWindowFrom]]
 
 ----
 [[CategoryAPI]], [[CategoryVideo]]
