--- a/SDL_CreateWindowFrom.mediawiki
+++ b/SDL_CreateWindowFrom.mediawiki
@@ -25,7 +25,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-
+You can add useful comments here
 
 == Related Functions ==
 :[[SDL_DestroyWindow]]
